      the lab.
  * lib/Lintian/Reporting/ResourceManager.pm:
    + [NT] Only preserve the last extension of the installed
      resource.  Previously it would keep all "extensions",
      including long parts of the original name if it happened
      to contain a period.
  * lib/Lintian/Util.pm:
    + [NT] Prefer dpkg-deb --ctrl-tarfile to "ar p" when dpkg
      is recent enough.

  * profiles/ubuntu/main.profile:
    + [BR] Exclude no-human-maintainers (Closes: #769036).

  * reporting/config:
    + [NT] Include and briefly document new configuration
      options.
  * reporting/{harness,html_reports}:
    + [NT] Rewrite harness and remove the hard dependency on
      a functional permanent laboratory in the reporting
      framework.
      - The framework now relies on the "harness state cache"
        (a YAML file), which can be updated atomically.
      - The harness framework now avoids stat(2)ing all
        artefacts on the mirror just to check if they are
        unchanged.
      - The harness frontends use less memory and now
        releases most of it before calling html_reports.
        This should reduce the peak memory requirements
        considerably for the html_reports part of the run.
  * reporting/{html_reports,templates/*}:
    + [NT] Reorder the datastructures shared with templates
      for better data sharing.  This reduces the memory
      consumption of html_reports by ~25% on lintian.d.o.
  * reporting/html_reports:
    + [NT] Templates are now always read and (their output)
      written in the UTF-8 encoding.
    + [NT] Stop reading $statistics_file from the config file.

  * t:
    + [NT] Apply patch from Matt Kraai to fix test case on
      i386.  (Closes: #771113)

 -- Niels Thykier <niels@thykier.net>  Sun, 09 Nov 2014 15:25:04 +0100

lintian (2.5.30) unstable; urgency=medium

  The "welcome Axel Beckert!" release.

  * Summary of tag changes:
    + Removed:
      - deprecated-kdelnk-file

  * checks/menu-format.{desc,pm}: